tests/parser/expr_parser/snapshots/kasl__tests__parser__expr_parser__literal_parser__parse_int.snap
---
source: src/tests/parser/expr_parser/literal_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 11,
        },
        kind: GlobalConst {
            name: "int",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 10,
                        end: 11,
                    },
                    kind: IntLiteral(
                        3,
                    ),
                },
            ],
        },
    },
]
