tests/parser/expr_parser/snapshots/kasl__tests__parser__expr_parser__literal_parser__parse_negative_float.snap
---
source: src/tests/parser/expr_parser/literal_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 16,
        },
        kind: GlobalConst {
            name: "float",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 12,
                        end: 16,
                    },
                    kind: FloatLiteral(
                        -2.6,
                    ),
                },
            ],
        },
    },
]
